# web-scraper-intuitivo

./: .gitignore  .replit  PROMPT_COMPLETO.md  app.py  proxy_server.py  pyproject.toml  replit.md  requirements.txt
