[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.71.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-genai>=1.46.0",
    "lxml>=5.4.0",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "replit>=4.1.2",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
]
